# rpi-QPUDSL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: rpi-qpudsl-config.cmake.in
include/: Error.h  Frontend.h  IRFwdDecl.h  IRHandle.h  IRNode.h  IntrusivePtr.h  Printer.h  RefCount.h  Scope.h  Type.h  Visitor.h
libpi/src/: mailbox.c
parallel-add/: Makefile  addshader.c  addshader.h  parallel-add.c  parallel-add.h  parallel-add.qasm  test-add.c  test-add.list
parallel-add/objs/: test-add.elf
parallel-mul/: Makefile  addshader.c  mulshader.c  parallel-mul.c  parallel-mul.h  parallel-mul.qasm  run.sh  test-mul.c  test-mul.list
parallel-mul/objs/: test-mul.elf
parallel-sub/: Makefile  parallel-sub.c  parallel-sub.h  parallel-sub.qasm  run.sh  subshader.c  subshader.h  test-sub.c  test-sub.list
parallel-sub/objs/: test-sub.elf
src/: Frontend.cpp  Printer.cpp  Type.cpp  Visitor.cpp
